--- a/lwipwin32.vcproj
+++ b/lwipwin32.vcproj
@@ -1147,6 +1147,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="app"
+			>
+			<File
+				RelativePath=".\app\http.c"
+				>
+			</File>
+			<File
+				RelativePath=".\app\http2.c"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="pcap\Lib\wpcap.lib"
 			>
